[project]
name = "mcp-file-search-server"
version = "1.0.0"
description = "Advanced file search MCP server"
authors = [{name = "Your Name", email = "your.email@example.com"}]

[project.scripts]
mcp-file-search-server = "mcp_file_search_server:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry.dependencies]
python = "^3.9"
mcp = "^1.0.0"
anyio = "^4.0.0"
pydantic = "^2.0.0"
rich = "^13.0.0"
aiofiles = "^23.0.0"
pathspec = "^0.11.0"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = ["E501", "B008", "C901"]